syntax = "proto3";

package rpc;

// Node services provide peer-to-peer discovery.
service Node {
  
  // Ping the Node to test the connection.
  rpc Ping (ID) returns (ID);

  // Get peers connected to the Node.
  rpc Peers (ID) returns (MultiAddresses);

  // Find peers that are closer to the target than the Node.
  rpc CloserPeers (Path) returns (MultiAddresses);
}

// ID is the public address of an entity in the overlay network. It does not
// contain connection details for the entity, which are usually held alongside
// this ID in a MultiAddress.
message ID {
  string address = 1;
}

// Path messages represent a sender attempting to reach a target. Both the
// sender and the target are represented by an ID.
message Path {
  ID to = 1;
  ID from = 2;
}

// MultiAddress messages contain the public multiaddress of a Node in the
// overlay network.
message MultiAddress {
  string multi = 1;
}

// MultiAddresses messages contain the public multiaddress of multiple Nodes in
// the overlay network.
message MultiAddresses {
  repeated string multis = 1;
}

// Nothing messages are empty.
message Nothing {}